--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue": "^2.5.17",
     "vue-i18n": "^8.3.2",
     "vue-router": "^3.0.2",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "xlsx": "^0.14.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
@@ -31,6 +32,7 @@
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
     "mockjs": "^1.0.1-beta3",
+    "vue-lazyload": "^1.2.6",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
@@ -42,7 +44,9 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
