--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "ant-design-vue": "^1.1.8",
     "axios": "^0.18.0",
+    "moment": "^2.23.0",
     "node-loader": "^0.6.0",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.17",
     "vue-i18n": "^8.3.2",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.2",
     "vuex": "^3.0.1",
     "xlsx": "^0.14.1"
@@ -34,22 +36,6 @@
     "mockjs": "^1.0.1-beta3",
     "vue-lazyload": "^1.2.6",
     "vue-template-compiler": "^2.5.17"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {
-      "no-console": "off"
-    },
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
   },
   "postcss": {
     "plugins": {
